fix spacing container

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,5 +7,10 @@
 .container{
     max-width: 1200px;
     padding: 0 15px;
-    margin-top: 105px;
+}
+
+@media only screen and (max-width: 992px) {
+    .container {
+        margin-top: 105px;
+    }
 }
